# paper

./: .gitignore  README.md  demo.sh  install.py  make-zipapp  prepare-bootstrap  pyproject.toml
cache/: CACHEDIR.TAG
cache/resolvelib/1.1.0/wheel-py2.py3-none-any/resolvelib-1.1.0.dist-info/: METADATA  RECORD
doc/: design.md
paper_ui/: LICENSE.txt  pyproject.toml
rfbs/: pyproject.toml
rfbs/src/rfbs/: env.py  fetch.py  venv.py
rfbs/src/rfbs/setup/: __init__.py  _clone.py  entry-point  launch  unpack.py
rfbs/src/rfbs/setup/installer/: README  _core.py  destinations.py  records.py  scripts.py  sources.py  utils.py
src/: launch  paper.py
src/paper/: __init__.py  __main__.py  firstrun.py
src/paper_ui/: __init__.py
src/rfbs/: fetch.py
wheels/: installer-0.7.0-py3-none-any.whl  package_installation_test-1.0.0-py3-none-any.whl  resolvelib-1.1.0-py2.py3-none-any.whl
