[project]
name = "paper-ui"
version = "0.1.0"
description = "the Python Application, Package and Environment wRangler"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3"
]
dependencies = [ ]
license = {file = "LICENSE.txt"}
requires-python = ">= 3.5"

[[project.authors]]
name = "Karl Knechtel"
email = "zahlman@proton.me"

[project.urls]
bugs = "https://github.com/zahlman/paper/issues"
changelog = "https://github.com/zahlman/paper/blob/master/changelog.md"
homepage = "https://github.com/zahlman/paper"

[project.scripts]
# This is mainly for testing at the moment.
welcome = "paper_ui:welcome"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
