[project]
name = "rfbs"
version = "0.1.0"
description = "Resolve/Fetch/Build/Setup: API for the Paper package installer"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3"
]
dependencies = [ ]
license = {file = "LICENSE.txt"}

[[project.authors]]
name = "Karl Knechtel"
email = "zahlman@proton.me"

[project.urls]
bugs = "https://github.com/zahlman/paper/issues"
changelog = "https://github.com/zahlman/paper/blob/master/changelog.md"
homepage = "https://github.com/zahlman/paper"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
